feat(chats): 添加聊天记录管理功能
- 实现聊天标题重命名功能
- 添加聊天置顶功能
- 实现聊天归档与取消归档功能
- 添加批量删除聊天记录功能
- 实现批量归档和取消归档功能
- 在ChatService中添加归档状态管理方法
- 为所有修改操作添加事务注解确保数据一致性